# l4d2vr

./: .gitignore  .gitmodules  L4D2-Convars-Review.md  L4D2VRConfigTool.sln  README.md  _tmp_vtable_index.html  build_release_x86.cmd  build_release_x86.ps1  fetch_imgui.ps1
L4D2VR/: config.txt  d3d9_device.cpp  dllmain.cpp  game.cpp  game.h  game_sounds_vrmod.txt  haptics_config.txt  hooks.cpp  hooks.h  l4d2vr.vcxproj  l4d2vr.vcxproj.filters  local_client_convars.nut  offsets.h  sigscanner.h  source_access.h  special_infected_features.cpp  special_infected_featuresa.cpp  vr.cpp  vr.h  vr_payload.h
L4D2VR/Release/: d3d9.dll.recipe  version.res
L4D2VR/SteamVRActionManifest/: action_manifest.json  bindings_knuckles.json  bindings_oculus_touch.json  bindings_vive_cosmos_controller.json
L4D2VR/hooks/: hooks_combat_network.inl  hooks_content_cpu.inl  hooks_createmove.inl  hooks_init.inl  hooks_misc.inl  hooks_render.inl
L4D2VR/sdk/: cvar.h  material.h  sdk.h  trace.h  vector.h
L4D2VR/vr/: vr_aiming.inl  vr_lifecycle.inl  vr_lifecycle_init.inl  vr_lifecycle_pose_hud.inl  vr_lifecycle_update.inl  vr_mock_openvr.inl  vr_process_input.inl  vr_roomscale_prediction.inl  vr_tracking.inl  vr_viewmodel_config.inl
L4D2VRConfigTool/: L4D2VRConfigTool.vcxproj  imgui.ini
L4D2VRConfigTool/src/: Options.cpp  Options.h  main.cpp
dxvk/src/d3d9/: d3d9_device.cpp
dxvk_local/: LICENSE  README.md  build-win32.txt  build-win64.txt  dxvk-async.patch  dxvk.conf  meson.build  meson_options.txt  package-release.sh  setup_dxvk.sh  version.h.in
dxvk_local/include/: version.h
dxvk_local/include/openvr/: openvr.hpp
dxvk_local/include/shaders/: d3d9_convert_a2w10v10u10.h  d3d9_convert_l6v5u5.h  d3d9_convert_nv12.h  d3d9_convert_x8l8v8u8.h  d3d9_convert_yuy2_uyvy.h  d3d9_convert_yv12.h  dxvk_blit_frag_1d.h  dxvk_blit_frag_2d.h  dxvk_blit_frag_3d.h  dxvk_clear_buffer_f.h  dxvk_clear_buffer_u.h  dxvk_clear_image1d_f.h  dxvk_clear_image1d_u.h  dxvk_clear_image1darr_f.h  dxvk_clear_image1darr_u.h  dxvk_clear_image2d_f.h  dxvk_clear_image2d_u.h  dxvk_clear_image2darr_f.h  dxvk_clear_image2darr_u.h  dxvk_clear_image3d_f.h  dxvk_clear_image3d_u.h  dxvk_copy_buffer_image.h  dxvk_copy_color_1d.h  dxvk_copy_color_2d.h  dxvk_copy_color_ms.h  dxvk_copy_depth_1d.h  dxvk_copy_depth_2d.h  dxvk_copy_depth_ms.h  dxvk_copy_depth_stencil_1d.h  dxvk_copy_depth_stencil_2d.h  dxvk_copy_depth_stencil_ms.h  dxvk_fullscreen_geom.h  dxvk_fullscreen_layer_vert.h  dxvk_fullscreen_vert.h  dxvk_pack_d24s8.h  dxvk_pack_d32s8.h  dxvk_present_frag.h  dxvk_present_frag_blit.h  dxvk_present_frag_ms.h  dxvk_present_frag_ms_amd.h  (+14 more)
dxvk_local/include/spirv/: GLSL.std.450.hpp
dxvk_local/include/vulkan/: vulkan_core.h
dxvk_local/lib/: libd3dcompiler_43.def
dxvk_local/lib32/: libd3dcompiler_43.def
dxvk_local/src/: meson.build
dxvk_local/src/d3d9/: d3d9.def  d3d9_adapter.cpp  d3d9_adapter.h  d3d9_annotation.cpp  d3d9_annotation.h  d3d9_buffer.cpp  d3d9_buffer.h  d3d9_caps.h  d3d9_common_buffer.cpp  d3d9_common_buffer.h  d3d9_common_texture.cpp  d3d9_common_texture.h  d3d9_constant_layout.h  d3d9_constant_set.h  d3d9_cursor.cpp  d3d9_cursor.h  d3d9_device.cpp  d3d9_device.h  d3d9_device_child.h  d3d9_fixed_function.cpp  d3d9_fixed_function.h  d3d9_format.h  (+52 more)
dxvk_new/: buildenv.h
dxvk_new/include/: version.h
dxvk_new/src/d3d9/: d3d9_device.cpp  d3d9_interface.cpp  d3d9_vr.cpp  d3d9_vr.h  meson.build
dxvk_new/src/d3d9/shaders/: d3d9_convert_w11v11u10.h
dxvk_new/subprojects/dxbc-spirv/tests/: meson.build  test_main.cpp
dxvk_new/subprojects/dxbc-spirv/tests/api/: test_api.cpp  test_api_resources.cpp  test_api_spirv.cpp  test_api_spirv.h
tools/ghidra/: DecompileAt.java  DumpVtableSlice.java  DumpXrefsToSymbol.java  FindClientClassSymbols.java  FindClientClassSymbols.py  FindRttiVtables.java  FindSymbols.java
(+420 files in other folders)
